# hadMolee

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
executables/: CMakeLists.txt
include/LoopTools/: LT_box.hpp  LT_triangle.hpp
include/core/: DsDpi.hpp  DsDpi_decay.hpp  amplitude.hpp  amplitude_fitter.hpp  amplitude_sum.hpp  box.hpp  breit_wigner.hpp  charmoniumlike.hpp  constants.hpp  data_formatting.hpp  debug.hpp  decay_process.hpp  hadronic_molecule.hpp  helicities.hpp  loop_integrands.hpp  molecule.hpp  propagator.hpp  reaction_kinematics.hpp  triangle.hpp
include/physics/: DsDpi.hpp  Y_meson.hpp  Z_meson.hpp
physics/: DsDpi.hpp  DsDpi_swave.hpp  Jpsipipi_boxes.hpp  Psi(4160).hpp  Y(4260).hpp  Y_meson.hpp  Z_meson.hpp
physics/DsDpi/: D1.hpp  D1_couplings.hpp  contact.hpp
physics/Jpsipipi/: boxes.hpp  counter_terms.hpp  triangles.hpp
physics/lineshapes/: Y(4260).hpp  Z(3900).hpp  charmonium.hpp
scripts/: DsDpi_lineshape.cpp  DsDpi_widths.cpp  Jpsipipi_widths.cpp  Y_propagator.cpp  Y_self_energy.cpp  Z_propagator.cpp  Z_self_energy.cpp  dalitz_boundary.cpp  full_widths.cpp  self_energies.cpp  swave_widths.cpp  tree_widths.cpp  triangle_singularities.cpp  triangle_widths.cpp  triangles_plot.cpp  width_phase_space.cpp
scripts/DsDpi/: cospi.cpp  widths.cpp  xsections.cpp
scripts/Jpsipipi/: widths.cpp
scripts/testing/: Y_propagator.cpp  Z_propagator.cpp  box_scan.cpp  dalitz_boundary.cpp  self_energies.cpp
src/: CMakeLists.txt  HADMOLEELinkDef.h
src/LoopTools/: CMakeLists.txt  LT_box.cpp  LT_triangle.cpp  LT_triangle.hpp
src/analysis/: colors.hpp  data_set.hpp  elementwise.hpp  fitter.cpp  fitter.hpp  plot.cpp  plot.hpp  plotter.cpp  plotter.hpp
src/cling/: CMakeLists.txt  Load.C  ee3Body.cpp  hadMolee.cpp
src/core/: CMakeLists.txt  DsDpi_decay.cpp  EE3BODYLinkDef.h  HADMOLEELinkDef.h  amplitude.cpp  amplitude.hpp  amplitude_fitter.cpp  amplitude_fitter.hpp  amplitude_sum.cpp  box.cpp  box.hpp  breit_wigner.hpp  complex.hpp  constants.hpp  data_formatting.cpp  debug.hpp  decay_process.cpp  fitter.cpp  fitter.hpp  hadronic_molecule.cpp  kinematics.hpp  lineshape.hpp  loop_integrands.hpp  molecule.hpp  print.hpp  propagator.cpp  reaction_kinematics.hpp  triangle.cpp  triangle.hpp
